MDEV-27235: Crash on SET GLOBAL innodb_encrypt_tables

fil_crypt_set_encrypt_tables(): If no encryption threads have been
initialized, do nothing.